# File_conversions

./: .gitignore  File_conversions.sln  ReadMe.txt  TODO.txt  UpgradeHardware.bat  UpgradeOSUtils.bat
ALOG2NMEA/: ALOG2NMEA.sln  ALOG2NMEA.vcproj  ALOG2NMEA_Debug.bat  ALOG2NMEA_Release.bat  MODEM_data_4_2_2015_____13_29_44.txt  Main.c  Makefile  Utils.h
ALOG2SeanetCSV/: ALOG2SeanetCSV.sln  ALOG2SeanetCSV.vcproj  ALOG2SeanetCSV_Debug.bat  ALOG2SeanetCSV_Release.bat  CHANGELOG.TXT  Main.c  Makefile  Utils.c  VICI_data_2_10_2014_____16_38_42._moos  (+1 more)
GPSFileConverter/: Main.c  (+5 more)
HSVLInterval/: CMakeLists.txt  HSVLInterval.sln  HSVLInterval.vcxproj  HSVLInterval.vcxproj.filters  HSVLInterval_Release.bat  Main.cpp  Makefile
LocalWaypoints2WGS/: CHANGELOG.TXT  CMakeLists.txt  Env.h  Globals.h  LocalWaypoints2WGS.sln  LocalWaypoints2WGS.vcproj  LocalWaypoints2WGS.vcxproj  LocalWaypoints2WGS.vcxproj.filters  LocalWaypoints2WGS_Debug.bat  LocalWaypoints2WGS_Release.bat  Main.cpp  Makefile  Utils.cpp  Utils.h  Waypoints.cpp  Waypoints.csv  env.txt  wplocal.txt
LocalWaypoints2WGS/Backup_vs2008/: LocalWaypoints2WGS.sln  LocalWaypoints2WGS.vcproj
LocalWaypoints2WGS/Backup_vs2012/: LocalWaypoints2WGS.sln  LocalWaypoints2WGS.vcxproj
LocalWaypoints2WGS/Debug/: BuildLog.htm  mt.dep
LocalWaypoints2WGS/Release/: BuildLog.htm  mt.dep
WGS2LocalWaypoints/: CHANGELOG.TXT  CMakeLists.txt  Env.cpp  Globals.cpp  Globals.h  Main.cpp  Utils.cpp  WGS2LocalWaypoints.sln  WGS2LocalWaypoints.vcproj  WGS2LocalWaypoints.vcxproj  WGS2LocalWaypoints.vcxproj.filters  WGS2LocalWaypoints_Debug.bat  WGS2LocalWaypoints_Release.bat  Waypoints.csv  Waypoints.h  env.txt  wplocal.txt
WGS2LocalWaypoints/Debug/: BuildLog.htm  mt.dep
WGS2LocalWaypoints/Release/: BuildLog.htm  mt.dep
(+456 files in other folders)
