cmake_minimum_required(VERSION 2.8...3.16)
project(HSVLInterval)
#find_package(OpenCV 3.2 REQUIRED)
find_package(OpenCV)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(HSVLInterval Main.cpp)
if(OpenCV_VERSION VERSION_LESS "4")
else()
	if(MSVC)
	else()
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") # CMAKE_CXX_STANDARD does not seem to work on Mac OS...
	endif()
endif()
target_link_libraries(HSVLInterval ${OpenCV_LIBS})
if(MINGW)
	message(STATUS "You might need to set CMake variables OpenCV_ARCH=x86 (or e.g. x64) and OpenCV_RUNTIME=mingw (or e.g. mingw7) if e.g. OpenCV mixes 64 bit libraries with the 32 bit compiler or cannot find the correct versions...")
endif()
