cmake_minimum_required(VERSION 2.8...3.16)
project(LocalWaypoints2WGS)
option(ENABLE_PROJ "ENABLE_PROJ" OFF)
if(ENABLE_PROJ)
	add_definitions(-D ENABLE_PROJ)
	find_package(PROJ QUIET)
	if(PROJ VERSION_LESS "4.0")
		find_package(PROJ4 REQUIRED)
		set(PROJ_LIBRARIES ${PROJ4_LIBRARIES})
	endif()
endif()
add_executable(LocalWaypoints2WGS Main.cpp Globals.cpp Env.cpp Utils.cpp)
target_link_libraries(LocalWaypoints2WGS ${PROJ_LIBRARIES})
